python-app.yml - included secret key

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,5 +29,7 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest --pylint --cov
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
         pytest --pylint --cov
